--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
 
   <div id="root"></div>
 
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+  </script>
   <script type="text/javascript">
     (function () {
       emailjs.init("user_eKpjRqD0C2exEjS3qGgcT");
